# sqs-to-slack

./: .gitignore  .travis.yml  Cargo.toml  README.MD  settings.example.yaml
src/: main.rs  slack.rs  sqs.rs  sqs_to_slack.rs
