[package]
name = "sqs-to-slack"
version = "0.1.0"
authors = ["av_elier <adelier1111@gmail.com>"]

[dependencies]
log = "0.4.0"
env_logger = "0.5.13"

config = "0.9.1"

http = "0.1"
hyper = "0.12"
hyper-tls = "0.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

rusoto_core = "0.34.0"
rusoto_sqs = "0.34.0"
